--- a/dists/emscripten/custom_shell.html
+++ b/dists/emscripten/custom_shell.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta content="width=device-width,initial-scale=1,viewport-fit=cover" name=viewport>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="scummvm-192.png">
   <title>ScummVM</title>
-
   <style>
     body {
       margin: 0;
@@ -23,10 +25,6 @@
       display: block;
     }
 
-    textarea.emscripten {
-      font-family: monospace;
-      width: 80%;
-    }
 
     div.emscripten {
       text-align: center;
@@ -108,39 +106,57 @@
       font: bold large/1.4 "Trebuchet MS", Verdana, Tahoma, Sans-Serif;
     }
 
+    #status:empty {
+      display: none;
+    }
+
     #status.error {
       background: red
+    }
+
+    textarea#output {
+      display: none;
+    }
+
+    /* show console only when status is not empty */
+    #status:not(:empty)~textarea#output {
+      display: block;
+      position: absolute;
+      border: 3px solid black;
+      border-right-width: 3px;
+      border-right-style: solid;
+      border-right-color: black;
+      border-right: none;
+      background: #f6e08a;
+      border-bottom-left-radius: 1em;
+      border-bottom-right-radius: 1em;
+      width: 95%;
+      left: 0;
+      right: 0;
+      margin: auto;
+      resize: none;
+      font-family: "Source Code Pro", monospace;
     }
   </style>
 </head>
 
 <body>
-  <div class=emscripten>
-    <progress hidden id=progress max=100 value=0></progress>
+  <div class="emscripten">
+    <progress value="0" max="100" id="progress"></progress>
   </div>
   <div class="emscripten" id="status">Downloading ScummVM...</div>
-
-  <div class=emscripten_border>
-    <canvas class=emscripten id=canvas oncontextmenu=event.preventDefault() tabindex=-1></canvas>
+  <div class="emscripten_border">
+    <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
   </div>
+  <textarea id="output" rows="8"></textarea>
 
-  <hr>
-  <textarea class="emscripten" id="output" rows="8"></textarea>
 
   <script type='text/javascript'>
 
     var statusElement = document.getElementById('status');
     var progressElement = document.getElementById('progress');
 
-    function loadingDoneMessage() {
-      document.getElementById("progress").style.zIndex = 0;
-      return "All downloads complete."
-    }
-
-
     var Module = {
-      preRun: [],
-      postRun: [],
       print: (function () {
         var element = document.getElementById('output');
         if (element) element.value = ''; // clear browser cache
@@ -158,21 +174,17 @@
           }
         };
       })(),
-      printErr: function (text) {
-        if (arguments.length > 1) text = Array.prototype.slice.call(arguments).join(' ');
-        console.error(text);
-      },
-      canvas: (function () {
+      canvas: (() => {
         var canvas = document.getElementById('canvas');
 
         // As a default initial behavior, pop up an alert when webgl context is lost. To make your
         // application robust, you may want to override this behavior before shipping!
         // See http://www.khronos.org/registry/webgl/specs/latest/1.0/#5.15.2
-        canvas.addEventListener("webglcontextlost", function (e) { alert('WebGL context lost. You will need to reload the page.'); e.preventDefault(); }, false);
+        canvas.addEventListener("webglcontextlost", (e) => { alert('WebGL context lost. You will need to reload the page.'); e.preventDefault(); }, false);
 
         return canvas;
       })(),
-      setStatus: function (text) {
+      setStatus: (text) => {
         if (!Module.setStatus.last) Module.setStatus.last = { time: Date.now(), text: '' };
         if (text === Module.setStatus.last.text) return;
         var m = text.match(/([^(]+)\((\d+(\.\d+)?)\/(\d+)\)/);
@@ -184,39 +196,30 @@
           text = m[1];
           progressElement.value = parseInt(m[2]) * 100;
           progressElement.max = parseInt(m[4]) * 100;
-          progressElement.hidden = false;
-
+          progressElement.style.display = "block";
         } else {
           progressElement.value = null;
           progressElement.max = null;
-          progressElement.hidden = true;
-        }
-        if (text && text.length > 0) {
-          console.log((new Date()).toLocaleTimeString() + " " + text)
-          text += "⚡️"
-          statusElement.style.display = "block";
-        } else {
-          statusElement.style.display = "none";
+          progressElement.style.display = "none";
         }
         statusElement.innerHTML = text;
       },
       totalDependencies: 0,
-      monitorRunDependencies: function (left) {
+      monitorRunDependencies: (left) => {
         this.totalDependencies = Math.max(this.totalDependencies, left);
-        Module.setStatus(left ? 'Preparing... (' + (this.totalDependencies - left) + '/' + this.totalDependencies + ')' : loadingDoneMessage());
+        Module.setStatus(left ? 'Preparing... (' + (this.totalDependencies - left) + '/' + this.totalDependencies + ')' : '');
       }
     };
     Module.setStatus('Downloading ScummVM...');
-    window.onerror = function () {
-      statusElement.classList.add("error")
+    window.onunhandledrejection = window.onerror = (event) => {
+      // TODO: do not warn on ok events like simulating an infinite loop or exitStatus
       Module.setStatus('Exception thrown, see JavaScript console');
-      Module.setStatus = function (text) {
-        if (text) Module.printErr('[post-exception status] ' + text);
+      Module.setStatus = (text) => {
+        if (text) console.error('[post-exception status] ' + text);
       };
     };
 
   </script>
-
   {{{ SCRIPT }}}
 </body>
 
